Home page like before, style updates, link as blocks, add "Last updated", add "Edit page" 👌

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -1,21 +1,26 @@
 /* https://vitepress.dev/guide/extending-default-theme#customizing-css */
 :root {
   --vp-c-brand-1: #fcd15a;
-  --vp-c-brand-2: rgb(145 118 0); /* hover on links */
+  --vp-c-brand-2: var(--vp-c-brand-1); /* hover on links */
   --vp-c-brand-3: var(--vp-c-brand-1);
-  --vp-code-color: var(--vp-c-brand-2); /* `Code` */
+  --vp-code-color: rgb(145 118 0); /* `Code` */
   --vp-c-tip-1: var(--vp-c-text-1); /* `Code` in tips */
   --vp-code-link-color: var(
     --vp-code-color
   ); /* `Code` in links. Primary yellow is too light */
+  --vp-sidebar-bg-color: white;
+}
+
+.dark {
+  --vp-sidebar-bg-color: var(--vp-c-bg-alt);
 }
 
 /* Force dark header even if light theme */
 header {
-  --vp-c-bg: #1b1b1f;
+  --vp-c-bg: #161618;
   --vp-c-text-1: rgba(255, 255, 245, 0.86);
-  --vp-nav-bg-color: #1b1b1f;
-  --vp-c-bg-alt: #161618;
+  --vp-nav-bg-color: var(--vp-c-bg);
+  --vp-c-bg-alt: var(--vp-c-bg);
   --vp-c-text-2: rgba(235, 235, 245, 0.6);
   --vp-c-divider: #2e2e32;
   --vp-c-bg-elv: #202127;
@@ -24,6 +29,9 @@ header {
 .VPNavBar {
   /* Override here, otherwise it is 'transparent' */
   background-color: var(--vp-c-bg) !important;
+}
+.VPNavBar .vpi-sun {
+  background-color: #3c3c43 !important;
 }
 
 .is-active > .item > .link .text {
@@ -34,4 +42,49 @@ header {
 /* Here especially for the underline color */
 .vp-doc a {
   color: var(--vp-code-color);
+}
+
+/* --- Custom classes --- */
+
+.link-as-block {
+  display: inline-block;
+  min-width: 50%;
+  border: 1px solid var(--vp-c-divider);
+  text-decoration: none !important;
+  border-radius: 8px;
+  padding: 12px 16px;
+  transition:
+    color 0.25s,
+    opacity 0.25s,
+    border-color 0.25s !important;
+}
+.link-as-block:hover {
+  border-color: var(--vp-c-brand-1);
+}
+
+.link-for-home {
+  display: block;
+  margin-top: 16px;
+  text-decoration: none !important;
+  border: 1px solid var(--vp-c-divider);
+  border-radius: 8px;
+  padding: 20px 20px;
+  transition:
+    color 0.25s,
+    opacity 0.25s,
+    border-color 0.25s !important;
+}
+.link-for-home:hover {
+  border-color: var(--vp-c-brand-1);
+}
+.link-for-home:after {
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' shape-rendering='geometricPrecision' viewBox='0 0 24 24' class='w-4 h-4 stroke-dark/7 transition-all group-hover:translate-x-0.5 group-hover:stroke-primary/8 dark:stroke-light/6' height='24' width='24' style='color: currentcolor;'%3E%3Cpath d='M9 18l6-6-6-6'%3E%3C/path%3E%3C/svg%3E");
+  position: absolute;
+  right: 20px;
+  transition-property: right;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
+}
+.link-for-home:hover:after {
+  right: 17px;
 }
