--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -13,6 +13,7 @@
   --vp-c-brand-3: var(--vp-c-brand-1);
   --vp-code-color: rgb(145 118 0); /* `Code` */
   --vp-c-tip-1: var(--vp-c-text-1); /* `Code` in tips */
+  --vp-c-tip-2: var(--vp-code-color); /* `Code` in links + hover in tips */
   --vp-code-link-color: var(
     --vp-code-color
   ); /* `Code` in links. Primary yellow is too light */
