Some fle renaming to camelCase + move Content Creator page + be able to use iconify icons

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -107,7 +107,8 @@ header .title > span {
 /* --- Custom classes --- */
 
 .link-as-block {
-  display: inline-block;
+  display: inline-flex;
+  column-gap: 8px;
   min-width: 50%;
   border: 1px solid var(--vp-c-divider);
   text-decoration: none !important;
