Move link to docs v1 + fix external link position

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -107,7 +107,8 @@ header .title > span {
 .VPSidebarItem .vp-external-link-icon:after {
   position: absolute;
   z-index: 10;
-  right: 0;
+  top: 12px;
+  right: 156px;
 }
 
 /* --- Custom classes --- */
