adding more information about 'no dataset orders' error in grantAccess numberOfAccess params explanation

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -58,7 +58,8 @@ header .title > span {
 
 /* `Code` in links. Primary yellow is too light */
 /* Here especially for the underline color */
-.vp-doc a {
+.vp-doc a,
+.custom-block.info code {
   color: var(--vp-code-color);
 }
 
