--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -1,9 +1,10 @@
 /* https://vitepress.dev/guide/extending-default-theme#customizing-css */
 :root {
-  --vp-font-family-base: 'Open Sans', 'Chinese Quotes', 'Inter var', Inter,
-    ui-sans-serif, system-ui, -apple-system, 'system-ui', 'Segoe UI', Roboto,
-    'Helvetica Neue', Helvetica, Arial, 'Noto Sans', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --vp-font-family-base:
+    'Open Sans', 'Chinese Quotes', 'Inter var', Inter, ui-sans-serif, system-ui,
+    -apple-system, 'system-ui', 'Segoe UI', Roboto, 'Helvetica Neue', Helvetica,
+    Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol', 'Noto Color Emoji';
 
   --vp-sidebar-width: 360px; /* Default is 272px, but we have some long method names */
   --vp-nav-logo-height: 32px;
