--- a/.vitepress/theme/hello-world-style.css
+++ b/.vitepress/theme/hello-world-style.css
@@ -1,8 +1,8 @@
 /* Global style */
 :root {
   --primary-color: #fcd15a;
-  --accent-color: #1D1D24;
-  --card-shadow: 0px 2px 6px 0px #1D1D241A;
+  --accent-color: #1d1d24;
+  --card-shadow: 0px 2px 6px 0px #1d1d241a;
   --card-hover-shadow: 0px 4px 8px #1d1d242d;
   --border-radius: 6px;
   --transition: all 0.3s ease;
@@ -21,7 +21,7 @@ html:not(.dark) .dark-only {
   background: linear-gradient(135deg, #fcd15a, #ffad4d);
   border-radius: var(--border-radius);
   padding: 0rem 2rem 1rem;
-  color: #1D1D24;
+  color: #1d1d24;
   max-width: 800px;
   margin: 0 auto;
 }
